@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.15-dev
 
+add 'testcover' make target for running tests with Devel::Cover
+[Geoffrey Young]
+
 
 
 
